--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <p>This is an age verification page. To continue using our service, submit your age. Please be honest about your answer</p>
+    <p class="center">This is an age verification page. To continue using our service, submit your age. Please be honest about your answer</p>
     <button id="submit"> Submit 
     <input type="text" id="start"></button>
     <p id="response"></p>
